# team5

./: .gitignore  Cargo.toml
app/: Cargo.toml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
core/src/: file_io.rs  master_secrets.rs
engine/: Cargo.toml
engine/fork/libsodium-sys-stable-1.23.2-fork/: .cargo_vcs_info.json  Cargo.toml  build.rs
engine/fork/libsodium-sys-stable-1.23.2-fork/src/: lib.rs  rust_wrappings.rs  sodium_bindings.rs  wai_component.rs
engine/fork/libsodium-sys-stable-1.23.2-fork/src/rust_wrappings/: aes256gcm.rs  hasher.rs  init.rs  mod.rs  sodium_box.rs  x25519.rs
engine/fork/machineid-rs-1.2.4-fork/: Cargo.toml
engine/fork/machineid-rs-1.2.4-fork/src/: lib.rs  linux.rs  windows.rs
engine/fork/sysinfo-0.29.11-fork/src/: common.rs  system.rs  traits.rs
engine/fork/url-2.5.8-fork/: Cargo.toml.orig
engine/fork/url-2.5.8-fork/src/: host.rs  lib.rs
engine/libs/ecies-0.2.8-fork/: .cargo_vcs_info.json  Cargo.toml
engine/libs/ecies-0.2.8-fork/libs/libsecp256k1-0.7.2-fork/: Cargo.toml
engine/libs/ecies-0.2.8-fork/libs/libsecp256k1-0.7.2-fork/src/: lib.rs
engine/libs/ecies-0.2.8-fork/libs/libsecp256k1-0.7.2-fork/tests/: verify.rs
engine/libs/ecies-0.2.8-fork/libs/libsecp256k1-core-0.3.0-fork/: Cargo.toml
engine/libs/ecies-0.2.8-fork/libs/libsecp256k1-core-0.3.0-fork/src/: ecdh.rs  ecmult.rs  field.rs  group.rs  lib.rs  scalar.rs
engine/libs/ecies-0.2.8-fork/src/elliptic/: secp256k1.rs
engine/libs/ecies-0.2.8-fork/src/symmetric/: aead.rs  openssl_aes.rs
engine/libs/libsodium-sys-stable-1.23.2-fork/: libsodium-1.0.21-stable-mingw.tar.gz.minisig
engine/src/: data_base.rs  file_io.rs  header.rs  lib.rs  master_secrets.rs  user_secrets.rs
gui/src/: command_builder.rs  graphical_user_interface.rs  main.rs  window.rs
libs/url-2.5.8/: Cargo.toml  Cargo.toml.orig
libs/url-2.5.8/src/: lib.rs
src/: MasterPW.rs  credential.rs  crypto.rs  data_base.rs  file_io.rs  gen_key.rs  header.rs  lib.rs  main.rs  master_secrets.rs  secrets.rs  str32.rs  user_secrets.rs
src/.deprecated/: secrets.rs
src/ui/: graphical_user_interface.rs  mod.rs
ui/: Cargo.toml
ui/src/: command_builder.rs  graphical_user_interface.rs  lib.rs  macros.rs  main.rs  viewport_error.rs  window.rs
