[package]
name = "team5"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[workspace]
members = ["engine", "cli", "ui"]

[dependencies]
cli = {path = "./cli"}
single-instance = "*"

[workspace.dependencies]
zeroize = { version = "*", features = ["derive"] }
arboard = "*"
single-instance = "*"


[features]

