[package]
name = "team5"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[workspace]
members = ["engine", "cli", "ui"]

[dependencies]
cli = {path = "./cli"}
single-instance = "*"
libsodium-sys-stable = { path = "engine/fork/libsodium-sys-stable-1.23.2-fork" }

[workspace.dependencies]
zeroize = { version = "*", features = ["derive"] }
arboard = "*"
single-instance = "*"

