[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rkyv = { version = "0.8" }
fs2 = "*"
bytemuck = "*"
aes-gcm = {version = "*", features = ["zeroize"]}
argon2 = { version = "*", features = ["zeroize"] }
rand = "0.8"
sha2 = "*"
sha3 = "*"
sysinfo = "0.30"
libc = "*"
#memsec = "*"
secrecy = "*"
zeroize = { workspace = true }
crossbeam-utils = "0.8.21"
clap = { version = "*", features = ["derive"] }
psl = "*"

url = { path = "libs/url-2.5.8-fork" }
libsodium-sys-stable = { path = "libs/libsodium-sys-stable-1.23.2-fork"}

