[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
eframe = { version = "0.33.3" }
zeroize = { workspace = true }
single-instance = { workspace = true }
anyhow = "1.0.101"
libsodium-sys-stable = { path = "../engine/fork/libsodium-sys-stable-1.23.2-fork"}
